--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           <button id="generateBtn">Generate password</button>
         </div>
       </div>
+      <footer>Made with ❤️ &copy; <a href="https://www.linkedin.com/in/harsh-saxena-8a9429178/" target="_blank">Harsh</a><br /> All Rights Reserved (2023-24)</footer>
     </div>
   </body>
 </html>
